Version 1.0.1

* "Select D-Mod" option now correctly sorts the selected D-Mods based on their display name
* Changed some text
* Refactored some code



Version 1.0.0

* "Select D-Mod" option can now select for multiple D-Mods at once!
  - D-Mod selection still abides by vanilla D-Mod rules (e.g. can only add D-Mods up to usual max, Compromised Armor/Hull being mutually-exclusive)
  - Price will change based on existing and planned D-Mods, but total price for adding 5 D-Mods should remain the same as before.
  - Now also displays D-Mod images to help identify desired D-Mods
* "Select D-Mod" and "Automate" prices now instead consider the base value of the selected ship's pristine equivalent
  - This should fix most instances where overall prices were less than intended due to (D) hulls having a lower base value.
* Changed source code packages and classes to be more readable



Version 0.5.1

* Ships now properly turn into their (D) variants when using D-MOD services.
* Made some confirmation dialogs more clear about what will result from the selected option



Version 0.5.0

* Adjusted the "Select D-Mod" picker:
  - Now properly selects only one D-Mod at a time.
  - Made it slimmer and taller, which, in most cases, lets it display all D-Mods without a scroller
* Made ship selection picker go wider if player fleet currently has more than 30 ships.



Version 0.4.0

* Added the "makeUnrestorable" option to settings.json and LunaSettings
  - Disabled by default
  - When enabled, the "Select a D-Mod" option also applies the 'Unrestorable' tag to the selected ship, preventing dockyard restoration and stopping the Hull Restoration skill from removing its D-Mods.
* Added the option to fully-automate a ship when visiting a D-MOD service center
  - Disabled by default
  - Even when enabled, you must first discover and defeat a certain defender fleet before unlocking the option.



Version 0.3.0

* Changed select D-Mod picker to use an actual selection screen.